<resources>
    <string name="app_name">Tetris</string>
    <string name="start">Start</string>
    <string name="tetris">Tetris</string>
    <string name="score">Score</string>
    <string name="highest">Highest</string>
    <string name="highest_score">9999</string>
    <string name="current">Current</string>
    <string name="current_score">0</string>
    <string name="restart">Restart</string>
    <string name="next">Next</string>
    <string name="stop">Stop</string>
    <string name="arrow_left">arrow left</string>
    <string name="arrow_tight">arrow tight</string>
    <string name="arrow_rotate">arrow rotate</string>
    <string name="arrow_little_down">arrow_little_down</string>
    <string name="arrow_quick_down">arrow_quick_down</string>
    <string name="nextbox">next box</string>
    <string name="speed">Speed</string>
    <string name="music">Music</string>
    <string name="sound_effect">Sound Effect</string>
    <string name="settings">Settings</string>
    <string name="play_again">Play Again</string>
    <string name="game_over">Game Over</string>
    <string name="home">Home</string>
</resources>