<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical"
    android:background="#f8d360">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="36sp"
        android:background="@drawable/settingsbackground"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/speed"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/music"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/sound_effect"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekBar_speed"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:max="5" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_music"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:checked="true" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_sound_effect"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:checked="true" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>