<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="103dp"
        android:layout_gravity="center"
        android:background="#00000000"
        android:contentDescription="@string/game_over"
        app:srcCompat="@drawable/gameover" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E9EAEA"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/game_over"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/current_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/current_score"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar_score"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_highest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/highest"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_play_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:backgroundTint="#619CBE"
            android:text="@string/play_again"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>