<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="540dp"
            android:orientation="horizontal"
            android:background="@drawable/background2"
            android:gravity="center">
            <FrameLayout
                android:id="@+id/layoutGame"
                android:layout_width="160dp"
                android:layout_height="480dp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/score"
                    android:textSize="36sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/highest"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/highest_score"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/current_score"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textSize="36sp" />

                <ImageView
                    android:id="@+id/next_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/stop"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/restart"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/arrow_left"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/arrow_left"
            android:contentDescription="arrow left"/>

        <ImageButton
            android:id="@+id/arrow_right"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/arrow_right"
            android:contentDescription="arrow tight"/>

        <ImageButton
            android:id="@+id/arrow_rotate"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/arrow_rotate"
            android:contentDescription="arrow rotate"/>

        <ImageButton
            android:id="@+id/arrow_down"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/arrow_down"
            android:contentDescription="arrow down"/>
    </LinearLayout>
</LinearLayout>